Bug fix to make privacy policy links visible.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -498,6 +498,16 @@ footer .widget.profile .twitter span {
   color: @color-swatch1;
 }
 
+.gdpr-footer {
+    background-color: @color-swatch7;
+    padding: 15px 0;
+    
+    a {
+        padding: 0 10px;
+		color: @color-swatch1;
+    }
+}
+
 
 
 /* ===============================
